--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,19 @@
-theme: minima
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
+# set type: two for 2-section layout; otherwise use type: one
+
+# Site settings
+title: Home 
+# the base hostname & protocol for your site
+url: "https://juangui37.github.io/CSC450SeniorResearch/" 
+baseurl: "/CSC450SeniorResearch/"
+# Build settings
+markdown: kramdown
+timezone: America/New_York
+course: /CSC450SeniorResearch/
+type: one
